Fix style alignment

--- a/PHP/Applications/Exercise 56 Tracking Inventory/style.css
+++ b/PHP/Applications/Exercise 56 Tracking Inventory/style.css
@@ -6,16 +6,8 @@ body {
   width: 80vw;
   margin: 0 auto;
   font-family:  Helvetica, Arial, sans-serif;
-  text-align: center;
 }
 
-label{
-    margin-left: 200px;
-}
 
-.container{
-    display: flex;
-    justify-content: flex-start;
-    margin-top: 30px;
-}
+
 
